--- a/html/index/index_rwd.css
+++ b/html/index/index_rwd.css
@@ -11,13 +11,13 @@
     position: relative;
     left: 0%;
   }
-  div.control{
+  div.control {
     width: 180px;
     position: relative;
     left: 40%;
     top: 250px !important;
   }
-  img.rwd{
+  img.rwd {
     width: 280px;
   }
 }
@@ -66,7 +66,6 @@
   }
   main.main {
     min-width: 100%;
-    
   }
   article.content_1 {
     margin: 0 auto;
@@ -75,14 +74,14 @@
     width: 100%;
     position: relative;
   }
-  
+
   div.text {
     display: flex;
     vertical-align: top;
     flex-wrap: wrap;
     flex-direction: column;
   }
-  
+
   div.text > p.title {
     width: fit-content;
     display: inline-block;
@@ -115,9 +114,9 @@
   .r_5,
   .r_6 {
     position: absolute;
-    top: 80px;
+    top: 60px;
   }
-  
+
   div.r_1,
   .r_3,
   .r_5 {
@@ -140,7 +139,7 @@
     right: 0;
     bottom: 0;
   }
-  .flex{
+  .flex {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
@@ -148,34 +147,33 @@
   }
   /* -------------------第二部分內容 -----------------*/
   article.content_2 {
-    
     margin: 0 auto;
     font-size: 0;
     padding-bottom: 100px;
     width: 100%;
     position: relative;
   }
-  
+
   div.text {
     display: flex;
     vertical-align: top;
     flex-wrap: wrap;
     flex-direction: column;
   }
-  
+
   article.content_2 > div.text > p.title {
     display: inline-block;
     font-size: 30px;
     padding: 55px 0 45px 0px;
   }
-  
+
   article.content_2 > div.text > p.content {
     display: inline-block;
     font-size: 18px;
     width: 100%;
     margin-left: 0px;
   }
-  
+
   div.images_2 {
     position: absolute;
     top: 93%;
@@ -209,7 +207,7 @@
     top: 50%;
     transform: translate(-50%, -40%);
   }
-  
+
   /* ------------------主題景點-------------- */
   article.theme {
     position: relative;
@@ -236,7 +234,7 @@
     left: 200px;
     bottom: 20px;
   }
-  div.control{
+  div.control {
     width: 180px;
     position: relative;
     left: 40%;
@@ -253,7 +251,7 @@
     width: 20px;
     cursor: pointer;
   }
-  
+
   div.background > img#right {
     position: absolute;
     left: 303px;
@@ -261,7 +259,7 @@
     width: 20px;
     cursor: pointer;
   }
-  
+
   div.images {
     width: 80%;
     display: inline-flex;
@@ -270,21 +268,21 @@
     left: 20px;
     top: 130px;
   }
-  img.rwd{
+  img.rwd {
     /* border: 1px solid red; */
     width: 100;
   }
-  .images a:first-child{
+  .images a:first-child {
     padding-left: 20px;
     max-width: 80%;
   }
-  .images a:nth-child(2){
+  .images a:nth-child(2) {
     display: none;
   }
-  .images a:nth-child(3){
+  .images a:nth-child(3) {
     display: none;
   }
-  
+
   div.banner_3 {
     margin-top: 100px;
     min-width: 100%;
@@ -293,26 +291,26 @@
     background-repeat: no-repeat;
     background-size: 100%;
   }
-  
+
   /* ----------------------------搭人分享 ---------------------*/
   div.pro {
     transform: scale(0.9);
     margin: 0 auto;
     padding: 0px 0px 40px 0px;
   }
-  
+
   article.proman {
     border: 1px solid hsla(193deg, 100%, 96%, 100);
     position: relative;
   }
-  
+
   div.background_2 {
     display: none;
   }
   div.background_3 {
     display: none;
   }
-  
+
   div.grid {
     margin: 0 auto;
     display: flex;
@@ -323,16 +321,33 @@
     padding: 0;
     margin-bottom: 82px;
   }
-  div.grid_item img{
+  div.grid_item img {
     align-items: center;
     justify-content: center;
     font-size: 0;
     width: 260px;
   }
+  div.grid_item p{
+    color: white;
+    -webkit-backdrop-filter: blur(100px); 
+    padding-top: 2px;
+    height: 70px;
+    font-size: 15px;
+    text-align: center;
+    transition: .3s;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+  }
+  div.grid_item:hover p{
+    transform: translateY(0px); 
+  }
 }
 /* ----------------平板尺寸 -----------------------------*/
-@media (min-width:576px) and (max-width: 767.98px){
-  header{
+@media (min-width: 576px) and (max-width: 767.98px) {
+  header {
     padding-bottom: 55px;
   }
   div img.scroll {
@@ -388,14 +403,23 @@
     width: 100%;
     position: relative;
   }
-  
+  div.r_0,
+  .r_1,
+  .r_2,
+  .r_3,
+  .r_4,
+  .r_5,
+  .r_6 {
+    position: absolute;
+    top: 60px;
+  }
   div.text {
     display: flex;
     vertical-align: top;
     flex-wrap: wrap;
     flex-direction: column;
   }
-  
+
   div.text > p.title {
     width: fit-content;
     display: inline-block;
@@ -417,43 +441,12 @@
     width: 250px;
     position: relative;
   }
-  div.rain {
-    width: fit-content;
-  }
-  div.r_0,
-  .r_1,
-  .r_2,
-  .r_3,
-  .r_4,
-  .r_5,
-  .r_6 {
-    position: absolute;
-    top: 80px;
-  }
-  
-  div.r_1,
-  .r_3,
-  .r_5 {
-    animation-name: rain;
-    animation-duration: 1s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
-  }
-  div.r_2,
-  .r_4,
-  .r_6 {
-    animation-name: rain;
-    animation-duration: 1s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
-    animation-delay: 0.5s;
-  }
   img.row {
     position: absolute;
     right: 0;
     bottom: 0;
   }
-  .flex{
+  .flex {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
@@ -461,34 +454,33 @@
   }
   /* -------------------第二部分內容 -----------------*/
   article.content_2 {
-    
     margin: 0 auto;
     font-size: 0;
     padding-bottom: 100px;
     width: 100%;
     position: relative;
   }
-  
+
   div.text {
     display: flex;
     vertical-align: top;
     flex-wrap: wrap;
     flex-direction: column;
   }
-  
+
   article.content_2 > div.text > p.title {
     display: inline-block;
     font-size: 30px;
     padding: 55px 0 45px 0px;
   }
-  
+
   article.content_2 > div.text > p.content {
     display: inline-block;
     font-size: 18px;
     width: 100%;
     margin-left: 0px;
   }
-  
+
   div.images_2 {
     position: absolute;
     top: 93%;
@@ -522,7 +514,7 @@
     top: 50%;
     transform: translate(-50%, -40%);
   }
-  
+
   /* ------------------主題景點-------------- */
   article.theme {
     position: relative;
@@ -552,7 +544,7 @@
     margin: 0 auto;
     width: 100%;
   }
-  div.control{
+  div.control {
     width: 180px;
     position: relative;
     left: 20%;
@@ -571,7 +563,7 @@
     width: 20px;
     cursor: pointer;
   }
-  
+
   div.control > img#right {
     position: absolute;
     left: 135px;
@@ -579,7 +571,7 @@
     width: 20px;
     cursor: pointer;
   }
-  
+
   div.images {
     width: 100%;
     display: inline-flex;
@@ -587,25 +579,25 @@
     position: absolute;
     top: 130px;
   }
-  img.rwd{ 
+  img.rwd {
     width: 90%;
   }
-  img.down{
+  img.down {
     width: 90%;
   }
-  img.last{
+  img.last {
     width: 90%;
   }
-  .images a:first-child{
+  .images a:first-child {
     padding-left: 20px;
   }
-  .images a:nth-child(2){
+  .images a:nth-child(2) {
     display: block;
   }
-  .images a:nth-child(3){
+  .images a:nth-child(3) {
     display: block;
   }
-  
+
   div.banner_3 {
     margin-top: 100px;
     min-width: 100%;
@@ -614,26 +606,26 @@
     background-repeat: no-repeat;
     background-size: 100%;
   }
-  
+
   /* ----------------------------搭人分享 ---------------------*/
   div.pro {
     transform: scale(0.9);
     margin: 0 auto;
     padding: 80px 0px 40px 0px;
   }
-  
+
   article.proman {
     border: 1px solid hsla(193deg, 100%, 96%, 100);
     position: relative;
   }
-  
+
   div.background_2 {
     display: none;
   }
   div.background_3 {
     display: none;
   }
-  
+
   div.grid {
     height: 800px;
     margin: 0 auto;
@@ -646,16 +638,33 @@
     padding: 0;
     margin-bottom: 82px;
   }
-  div.grid_item img{
+  div.grid_item img {
     align-items: center;
     justify-content: center;
     font-size: 0;
     width: 260px;
   }
+  div.grid_item p{
+    color: white;
+    backdrop-filter: blur(100px); 
+    padding-top: 2px;
+    height: 70px;
+    font-size: 15px;
+    text-align: center;
+    transition: .3s;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+  }
+  div.grid_item:hover p{
+    transform: translateY(0px); 
+  }
 }
 /* ------------------小電腦 ------------------------------*/
- @media (min-width:768px) and (max-width: 991.98px){
-  header{
+@media (min-width: 768px) and (max-width: 991.98px) {
+  header {
     padding-bottom: 55px;
   }
   div img.scroll {
@@ -711,14 +720,14 @@
     width: 100%;
     position: relative;
   }
-  
+
   div.text {
     display: flex;
     vertical-align: top;
     flex-wrap: wrap;
     flex-direction: column;
   }
-  
+
   div.text > p.title {
     width: fit-content;
     display: inline-block;
@@ -741,43 +750,12 @@
     position: relative;
     left: 35%;
   }
-  div.rain {
-    width: fit-content;
-  }
-  div.r_0,
-  .r_1,
-  .r_2,
-  .r_3,
-  .r_4,
-  .r_5,
-  .r_6 {
-    position: absolute;
-    top: 80px;
-  }
-  
-  div.r_1,
-  .r_3,
-  .r_5 {
-    animation-name: rain;
-    animation-duration: 1s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
-  }
-  div.r_2,
-  .r_4,
-  .r_6 {
-    animation-name: rain;
-    animation-duration: 1s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
-    animation-delay: 0.5s;
-  }
   img.row {
     position: absolute;
     right: 0;
     bottom: 0;
   }
-  .flex{
+  .flex {
     width: 100%;
     display: inline-block;
     margin: 0 auto;
@@ -792,31 +770,39 @@
     width: 100%;
     position: relative;
   }
-  
+
   article.content_2 > div.text {
     width: 100%;
   }
-  
+
   article.content_2 > div.text > p.title {
     display: inline-block;
     font-size: 30px;
     padding: 55px 0 45px 0px;
   }
-  
+
   article.content_2 > div.text > p.content {
     display: block;
     width: 100%;
     font-size: 18px;
     margin-left: 0px;
   }
-  
+  div.r_0,
+  .r_1,
+  .r_2,
+  .r_3,
+  .r_4,
+  .r_5,
+  .r_6 {
+    position: absolute;
+    top: 60px;
+  }
   div.images_2 {
-   position: relative;
-   left: 40%;
-   top: 40px;
-   width: fit-content;
-   margin-bottom: 80px;
-   
+    position: relative;
+    left: 40%;
+    top: 40px;
+    width: fit-content;
+    margin-bottom: 80px;
   }
   div.city {
     position: relative;
@@ -844,7 +830,7 @@
     top: 50%;
     transform: translate(-50%, -40%);
   }
-  
+
   /* ------------------主題景點-------------- */
   article.theme {
     position: relative;
@@ -874,11 +860,11 @@
     margin: 0 auto;
     width: 100%;
   }
-  div.control{
+  div.control {
     width: 180px;
     position: relative;
     left: 30%;
-    top: 250px;
+    top: 260px;
   }
   div.control > a {
     display: block;
@@ -893,7 +879,7 @@
     width: 20px;
     cursor: pointer;
   }
-  
+
   div.control > img#right {
     position: absolute;
     left: 135px;
@@ -908,27 +894,27 @@
     position: absolute;
     top: 130px;
   }
-  img.rwd{ 
+  img.rwd {
     width: 90%;
   }
-  img.down{
+  img.down {
     width: 90%;
   }
-  img.last{
+  img.last {
     width: 90%;
   }
-  .images a:first-child{
+  .images a:first-child {
     padding-left: 20px;
     /* max-width: 80%; */
   }
-  .images a:nth-child(2){
+  .images a:nth-child(2) {
     display: block;
     /* width: 40%; */
   }
-  .images a:nth-child(3){
+  .images a:nth-child(3) {
     display: block;
   }
-  
+
   div.banner_3 {
     margin-top: 100px;
     min-width: 100%;
@@ -937,26 +923,26 @@
     background-repeat: no-repeat;
     background-size: 100%;
   }
-  
+
   /* ----------------------------搭人分享 ---------------------*/
   div.pro {
     transform: scale(0.9);
     margin: 0 auto;
     padding: 80px 0px 40px 0px;
   }
-  
+
   article.proman {
     border: 1px solid hsla(193deg, 100%, 96%, 100);
     position: relative;
   }
-  
+
   div.background_2 {
     display: none;
   }
   div.background_3 {
     display: none;
   }
-  
+
   div.grid {
     height: 800px;
     margin: 0 auto;
@@ -969,15 +955,15 @@
     padding: 0;
     margin-bottom: 82px;
   }
-  div.grid_item img{
+  div.grid_item img {
     align-items: center;
     justify-content: center;
     font-size: 0;
     width: 260px;
   }
 }
-@media (min-width:992px) and (max-width: 1199.98px){
-  header{
+@media (min-width: 992px) and (max-width: 1199.98px) {
+  header {
     padding-bottom: 55px;
   }
   div img.scroll {
@@ -1033,14 +1019,14 @@
     width: 100%;
     position: relative;
   }
-  
+
   div.text {
     display: flex;
     vertical-align: top;
     flex-wrap: wrap;
     flex-direction: column;
   }
-  
+
   div.text > p.title {
     width: fit-content;
     display: inline-block;
@@ -1063,43 +1049,12 @@
     position: relative;
     left: 35%;
   }
-  div.rain {
-    width: fit-content;
-  }
-  div.r_0,
-  .r_1,
-  .r_2,
-  .r_3,
-  .r_4,
-  .r_5,
-  .r_6 {
-    position: absolute;
-    top: 80px;
-  }
-  
-  div.r_1,
-  .r_3,
-  .r_5 {
-    animation-name: rain;
-    animation-duration: 1s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
-  }
-  div.r_2,
-  .r_4,
-  .r_6 {
-    animation-name: rain;
-    animation-duration: 1s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
-    animation-delay: 0.5s;
-  }
   img.row {
     position: absolute;
     right: 0;
     bottom: 0;
   }
-  .flex{
+  .flex {
     width: 100%;
     display: inline-block;
     margin: 0 auto;
@@ -1114,31 +1069,39 @@
     width: 100%;
     position: relative;
   }
-  
+
   article.content_2 > div.text {
     width: 100%;
   }
-  
+
   article.content_2 > div.text > p.title {
     display: inline-block;
     font-size: 30px;
     padding: 55px 0 45px 0px;
   }
-  
+
   article.content_2 > div.text > p.content {
     display: block;
     width: 100%;
     font-size: 18px;
     margin-left: 0px;
   }
-  
+  div.r_0,
+  .r_1,
+  .r_2,
+  .r_3,
+  .r_4,
+  .r_5,
+  .r_6 {
+    position: absolute;
+    top: 60px;
+  }
   div.images_2 {
-   position: relative;
-   left: 40%;
-   top: 40px;
-   width: fit-content;
-   margin-bottom: 80px;
-   
+    position: relative;
+    left: 40%;
+    top: 40px;
+    width: fit-content;
+    margin-bottom: 80px;
   }
   div.city {
     position: relative;
@@ -1166,7 +1129,7 @@
     top: 50%;
     transform: translate(-50%, -40%);
   }
-  
+
   /* ------------------主題景點-------------- */
   article.theme {
     position: relative;
@@ -1195,7 +1158,7 @@
     margin: 0 auto;
     width: 100%;
   }
-  div.control{
+  div.control {
     width: 180px;
     position: relative;
     left: 150px;
@@ -1208,7 +1171,7 @@
     width: 23px;
     cursor: pointer;
   }
-  
+
   div.control > img#right {
     position: absolute;
     left: 145px;
@@ -1216,7 +1179,7 @@
     width: 23px;
     cursor: pointer;
   }
-  
+
   div.images {
     width: 100%;
     max-width: 1200px;
@@ -1232,19 +1195,19 @@
     position: absolute;
     top: 130px;
   }
-  img.rwd{ 
+  img.rwd {
     width: 90%;
   }
-  img.down{
+  img.down {
     width: 90%;
   }
-  img.last{
+  img.last {
     width: 90%;
   }
   div.images img.down {
     transform: translateY(70px);
   }
-  
+
   div.banner_3 {
     margin-top: 100px;
     width: 100%;
@@ -1254,76 +1217,74 @@
     background-repeat: no-repeat;
     background-size: cover;
   }
-  
+
   /* ----------------------------搭人分享 ---------------------*/
   div.pro {
     transform: scale(0.9);
     margin: 0 auto;
     padding: 80px 0px 40px 0px;
   }
-  
+
   article.proman {
     border: 1px solid hsla(193deg, 100%, 96%, 100);
     position: relative;
   }
-  
+
   div.background_2 {
     display: none;
   }
   div.background_3 {
     display: none;
   }
-  
-div.grid {
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: auto auto auto;
-  width: 960px;
-  padding: 20px 15px 20px;
-  margin-bottom: 82px;
-  z-index: 1;
-}
-div.grid_item {
-  font-size: 0;
-  width: fit-content;
-  padding: 20px 0px 20px;
-  z-index: 1;
-  
-}
-div.grid_item > a {
-  display: block;
-  position: relative;
-  overflow: hidden;
-}
-div.grid_item p{
-  color: white;
-  backdrop-filter: blur(100px); 
-  padding-top: 2px;
-  height: 70px;
-  font-size: 15px;
-  text-align: center;
-  transition: .3s;
-  position: absolute;
-  right: 0;
-  bottom: -70px;
-  border-bottom-left-radius: 15px;
-  border-bottom-right-radius: 15px;
-}
-div.grid_item span{
-  color: white;
-  padding: 5px;
-  text-align: left;
-  font-size: 12px;
-  display: block;
-  width: 260px;
-}
-div.grid_item:hover p{
-  transform: translateY(-70px); 
-}
 
+  div.grid {
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    width: 960px;
+    padding: 20px 15px 20px;
+    margin-bottom: 82px;
+    z-index: 1;
+  }
+  div.grid_item {
+    font-size: 0;
+    width: fit-content;
+    padding: 20px 0px 20px;
+    z-index: 1;
+  }
+  div.grid_item > a {
+    display: block;
+    position: relative;
+    overflow: hidden;
+  }
+  div.grid_item p {
+    color: white;
+    backdrop-filter: blur(100px);
+    padding-top: 2px;
+    height: 70px;
+    font-size: 15px;
+    text-align: center;
+    transition: 0.3s;
+    position: absolute;
+    right: 0;
+    bottom: -70px;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+  }
+  div.grid_item span {
+    color: white;
+    padding: 5px;
+    text-align: left;
+    font-size: 12px;
+    display: block;
+    width: 260px;
+  }
+  div.grid_item:hover p {
+    transform: translateY(-70px);
+  }
 }
-@media (min-width: 1200px) and (max-width: 1399.98px){
-  div.my_div1{
+@media (min-width: 1200px) and (max-width: 1399.98px) {
+  div.my_div1 {
     width: 100%;
   }
-}   
+}
