--- a/html/navbar.css
+++ b/html/navbar.css
@@ -24,7 +24,7 @@ nav.navbar > a img.logo {
   position: absolute;
   left: 80px;
   top: 20px;
-  z-index: 100;
+  z-index: 0;
 }
 
 nav.navbar > a img.logo2 {
@@ -53,7 +53,6 @@ nav.navbar > p {
 
 div.banner > p {
   color: hsla(0deg, 0%, 100%, 81%);
-  border-radius: 5px;
   width: max-content;
   font-size: 30px;
   padding: 3px 15px;
@@ -62,7 +61,21 @@ div.banner > p {
   left: 50%;
   transform: translateY(-50%) translateX(-50%);
   backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
 }
+div.bread {
+  width: 100%;
+  min-width: 1200px;
+  background-color: hsla(160deg, 52%, 40%, 15%);
+  height: 30px;
+}
+div.bread a {
+  line-height: 30px;
+}
+div.bread a:first-child {
+  padding-left: 80px;
+}
+
 /* -----------------rwd -----------------*/
 @media (max-width: 575.98px) {
 
@@ -88,10 +101,10 @@ div.banner > p {
   }
   img.menu {
     width: 30px;
-    height: 30xp;
+    /* height: 30px; */
     position: absolute;
     right: -50px;
-    top: -10px;
+    top: -13px;
   }
   div.banner > p {
     color: hsla(0deg, 0%, 100%, 81%);
@@ -241,7 +254,7 @@ nav.navbar > a img.logo {
   position: absolute;
   left: 80px;
   top: 20px;
-  z-index: 100;
+  z-index: 0;
   display: block;
 }
 
